# infotecs_intern

./: CMakeLists.txt  README.md
client/: client.cpp
common/: protocol.h  utils.h
libs/fileop_lib/: fileop.cpp  fileop.h
libs/progress_lib/: progress.cpp  progress.h
server/: server.cpp
